[metadata]
name = network-checker
version = 9.0.0
summary = Command line utilities for performing network verification
author = Mirantis Inc.
author-email = product@mirantis.com
home-page = http://mirantis.com
description-file =
    README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    dhcp_checker
    fuel_network_checker
    network_checker
    url_access_checker

[entry_points]
console_scripts =
   net_probe.py=network_checker.net_check.api:main
   fuel-netcheck=network_checker.cli:main
   dhcpcheck=dhcp_checker.cli:main
   urlaccesscheck=url_access_checker.cli:main

dhcp.check =
   discover=dhcp_checker.commands:ListDhcpServers
   request=dhcp_checker.commands:ListDhcpAssignment
   vlans=dhcp_checker.commands:DhcpWithVlansCheck

network_checker =
   multicast=network_checker.multicast.api:MulticastChecker
   simple=network_checker.tests.simple:SimpleChecker

urlaccesscheck =
   check=url_access_checker.commands:CheckUrls
   with_setup=url_access_checker.commands:CheckUrlsWithSetup

[global]
setup-hooks =
    pbr.hooks.setup_hook
    network_checker.hooks.setup_hook

[wheel]
python-tag = py2
